# online-food-ordering-system

./: .env  README.md  docker-compose.yaml
docs/: requirements.md
seed/: pyproject.toml
src/db/: 01-create-user.sh  Dockerfile
src/db/schema/shopgrab/: 00-utils.sql  01-address.sql  01-delivery_vendor.sql  01-member.sql  01-membership.sql  01-menu_item_group.sql  01-order_value.sql  01-payment_method.sql  01-product.sql  01-product_category.sql  01-product_feature_category.sql  01-quantity_break.sql  01-restaurant.sql  01-voucher.sql  02-member_address.sql  02-order.sql  02-orders.sql  02-payment.sql  02-product.sql  02-product_category.sql  02-product_category_classification.sql  02-product_feature.sql  02-product_feature_group.sql  02-restaurant.sql  02-voucher_distribution.sql  03-delivery.sql  03-invoice.sql  03-menu-item.sql  03-menu.sql  03-menu_item_audit.sql  03-monthy_subscription.sql  03-order_item.sql  03-orders.sql  03-price_component.sql  03-product_attribute.sql  03-product_audit.sql  03-product_category_classification.sql  03-product_feature_applicability.sql  03-product_feature_group_field.sql  04-delivery.sql  (+24 more)
src/db/scripts/: data.sql  order_delivery_invoice.sql  price_and_voucher.sql  product_feature_category.sql  restaurant_menu_feedback_complaint.sql  user_membership_payment.sql
src/seeder/: Dockerfile  main.py  pyproject.toml
src/seeder/src/online_food_ordering_system_seeder/: cli.py  commands.py  factories.py  factory.py  member_seeder.sql  models.py  product_seeder.sql  restaurant_seeder.sql
var/shared/: schema.sql
(+4 files in other folders)
